# HPOLib

./: .gitignore  CMakeLists.txt  README.md  format_code.sh
coreforge/tensor/: config.h  half.h
csrc/common/: check.h  cpu_info.h
csrc/core/: BFloat16.h  DType.h  Half.h  allocator.h  config.h  cuda.h  device.h  dispatch.h  logger.h  options.h  scalar.h  storage.h  tensor.h  tensorImpl.h  utils.h  vectorUtils.h
csrc/kernels/abs/: abs.h  abs_cpu.cpp
csrc/kernels/cpu/: abs_cpu.cpp
csrc/ops/: abs.cpp  ops.h  registry.h
csrc/tensor/: BFloat16.h  DType.h  allocator.h  options.h  scalar.h  utils.h
include/tensor/: BFloat16.h  DType.h  cuda.h  device.h  logger.h  options.h  scalar.h  storage.h  tensor.h  tensorImpl.h  utils.h  vectorUtils.h
tests/: CMakeLists.txt
tests/tensor/: test_half.cu
